--- a/assets/scss/components/blog/_reading-bar.scss
+++ b/assets/scss/components/blog/_reading-bar.scss
@@ -74,7 +74,6 @@
 .post-title__post-name {
   max-width: 30vw;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
